# emacs-agenda-viewer

./: .gitignore  AGENTS.md  CHANGELOG.org  CLAUDE.md  README.org  RUST_DAEMON_PLAN.org  deploy-web-eavd.sh  deploy-web.sh  deploy.sh  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: daemon.yml  release-mac-app.yml
apps/macos/: .gitignore  Package.swift  project.yml
apps/macos/EmacsAgendaViewer/: App.swift  Info.plist  Theme.swift
apps/macos/EmacsAgendaViewer/Assets.xcassets/AccentColor.colorset/: Contents.json
apps/macos/EmacsAgendaViewer/Models/: Models.swift
apps/macos/EmacsAgendaViewer/Networking/: APIClient.swift  DaemonHost.swift  EventSubscriber.swift
apps/macos/EmacsAgendaViewer/State/: AppSettings.swift  HabitStats.swift  Sorting.swift  TasksStore.swift
apps/macos/EmacsAgendaViewer/Views/: AllTasksView.swift  ContentStates.swift  RootView.swift  SettingsView.swift  TodayView.swift  UpcomingView.swift
apps/macos/EmacsAgendaViewer/Views/Components/: DateBadge.swift  PriorityBadge.swift  TagChips.swift  TaskDisplayable.swift  TaskRow.swift  TodoStatePill.swift
apps/macos/EmacsAgendaViewerMac/: App.swift  CalendarDropZone.swift  CalendarGridItem.swift  CalendarState.swift  CalendarSync.swift  CaptureSheet.swift  ClockManager.swift  Color+Hex.swift  CreateEventSheet.swift  EventKitService.swift  GroupSection.swift  Info.plist  MacAllTasksView.swift  MacCalendarView.swift  MacClockDock.swift  MacEisenhowerView.swift  MacEventBanners.swift  MacHabitsView.swift  MacInboxView.swift  MacInspectorView.swift  MacLogbookView.swift  MacRowActionsBuilder.swift  MacScheduleTray.swift  MacTaskRow.swift  MacTodayView.swift  MacToolbar.swift  MacUpcomingView.swift  NotesRenderer.swift  RefileSheet.swift  RootView.swift  SettingsView.swift  TaskExpandedCard.swift
apps/macos/Tests/EAVTests/: APIClientTests.swift  ModelDecodingTests.swift  NotesRendererTests.swift  SortingTests.swift  TestHelpers.swift
apps/macos/Tests/EAVTests/Fixtures/: agenda-entries.json  clock-status.json  files.json  keywords.json  priorities.json  tasks.json
daemon/: .gitignore  Cargo.toml
daemon/crates/eav-agenda/: Cargo.toml
daemon/crates/eav-agenda/src/: lib.rs  timestamp.rs
daemon/crates/eav-bridge/: Cargo.toml
daemon/crates/eav-bridge/examples/: mutation_latency.rs
daemon/crates/eav-bridge/src/: lib.rs  protocol.rs
daemon/crates/eav-core/: Cargo.toml
daemon/crates/eav-core/src/: lib.rs
daemon/crates/eav-core/tests/: golden_roundtrip.rs
daemon/crates/eav-index/: Cargo.toml
daemon/crates/eav-index/src/: lib.rs  snapshot.rs  watcher.rs
daemon/crates/eav-mcp/: Cargo.toml
daemon/crates/eav-mcp/src/: lib.rs
daemon/crates/eav-parse/: Cargo.toml
daemon/crates/eav-parse/examples/: malformed.rs  repeat_deadline.rs
daemon/crates/eav-parse/src/: extract.rs  lib.rs  timestamp.rs
daemon/crates/eav-parse/tests/: fixtures.rs
daemon/crates/eav-server/: Cargo.toml
daemon/crates/eav-server/src/: events.rs  lib.rs  routes.rs
daemon/crates/eavd/: Cargo.toml
daemon/crates/eavd/src/: main.rs
daemon/tests/fixtures/: calendar.org  diary.org  keywords.org  properties.org  repeat_deadline.org  tags_and_categories.org  timestamps.org
daemon/tests/golden/: regenerate.sh
elisp/: eav-bridge.el  eav-tests.el  eav.el
elisp/tests/fixtures/: calendar-events.org  nested-lists.org
scripts/: build-eavd-universal.sh  eav.server.plist.template  install-daemon.sh  install-launchd.sh
server/: emacs.ts  index.ts
src/: App.tsx  index.css  types.ts
src/api/: tasks.ts
src/components/: CalendarView.tsx  CaptureModal.tsx  ClockDock.tsx  DatePicker.tsx  EffortPicker.tsx  EisenhowerView.tsx  HabitsView.tsx  NotesRenderer.test.tsx  NotesRenderer.tsx  PriorityMenu.tsx  ScheduleTray.tsx  SettingsModal.tsx  Sidebar.tsx  TagPicker.tsx  TaskItem.tsx  TaskList.tsx  TodoStateMenu.tsx
src/hooks/: useDaemonEvents.ts  useTasks.ts  useTheme.ts
src/utils/: habits.ts  repeater.ts
tests/e2e/: fixtures.ts  game-night.spec.ts
