[workspace]
resolver = "2"
members = [
    "crates/eav-core",
    "crates/eav-parse",
    "crates/eav-index",
    "crates/eav-agenda",
    "crates/eav-bridge",
    "crates/eav-server",
    "crates/eav-mcp",
    "crates/eavd",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["Adithya Bhat"]
license = "MIT"
repository = "https://github.com/hermitsage/Emacs-Agenda-Viewer"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
async-stream = "0.3"

# HTTP / SSE
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
hyper = { version = "1.5", features = ["server"] }

# Org parsing — 0.10 is alpha but its API is what we want; pin precisely.
orgize = "=0.10.0-alpha.10"

# File watching
notify = "7.0"
notify-debouncer-full = "0.4"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# Logging / errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"

# Dates
chrono = { version = "0.4", features = ["serde"] }

# Misc
once_cell = "1.20"
parking_lot = "0.12"
bytes = "1.7"
regex = "1.10"

# Internal crates
eav-core   = { path = "crates/eav-core" }
eav-parse  = { path = "crates/eav-parse" }
eav-index  = { path = "crates/eav-index" }
eav-agenda = { path = "crates/eav-agenda" }
eav-bridge = { path = "crates/eav-bridge" }
eav-server = { path = "crates/eav-server" }
eav-mcp    = { path = "crates/eav-mcp" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[profile.dev]
opt-level = 0
