[package]
name = "eav-agenda"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
eav-core.workspace = true
eav-parse.workspace = true
chrono.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
