[package]
name = "eav-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
eav-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
bytes.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
futures.workspace = true
async-stream.workspace = true
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
