[package]
name = "eav-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
eav-core.workspace = true
eav-parse.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
rusqlite.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
once_cell.workspace = true
tokio.workspace = true
