[package]
name = "eav-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
eav-core.workspace = true
eav-index.workspace = true
eav-agenda.workspace = true
eav-bridge.workspace = true
eav-parse.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true
async-stream.workspace = true
parking_lot.workspace = true
chrono.workspace = true
